--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,41 +1,55 @@
-
-
-.titulo{
-padding-top: 100px;    
-padding-bottom: 100px; 
-text-align: center;
-background: #E55D87; 
-background: -webkit-linear-gradient(to right, #5FC3E4, #E55D87);  
-background: linear-gradient(to right, #5FC3E4, #E55D87); 
-}
-
-h1{
-    color:aliceblue;
-    font-size: 80px;
-}
-
-h4{
-    color: #ccc;
-    font-size: 20px;
-}
-
-.container {
+/* PORTADA DE LA PAGINA */
+.portada {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    height: 800px; /* Ajusta la altura a la ventana completa */
+    background-image: url('/multimedia/fondoPortada.jpg'); /* Imagen de fondo para la portada */
+    background-size: cover;
+    text-align: left;
+    box-shadow: 0 20px 10px rgba(0, 0, 0, 0.1); /* Sombra para profundidad */
 }
 
-.box {
-    border: 1px solid #ccc;
-    padding: 20px;
-    text-align: center;
-    width: 30%;
-    background-color: #ccc;
+.contenido-portada {
+    display: flex;
+    align-items: center;
+   
 }
+
+#tituloPortada {
+    font-size: 6em;
+    color: #3c4267;
+    margin-bottom: 10px;
+    font-family: 'Arial', sans-serif;
+}
+
+#subTitulo {
+    font-size: 1.5em;
+    background-color: #ffdd91;
+    color: #3c4267;
+    margin-bottom: 20px;
+    display: inline-block;
+    /* Ajusto el resaltado */
+    padding: 10px; 
+    border-radius: 10px;
+}
+
+#imagenPortada {
+    /* Tamaño imagen */
+    max-width: 600px; 
+    height: auto;
+    /* Espacio entre el texto y la imagen */
+    margin-left: 20px; 
+   
+}
+
+/* NAV */
+
 nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    background-color: #f1f1f1;
+    background-color: #ffdd91;
 }
 
 nav li {
@@ -45,5 +59,49 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: #333;
+    color: #3c4267;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+/* ESTADISTICAS */
+
+.estadisticas {
+    padding: 20px;
+    background-color: #f9f9f9; /* Fondo suave para la sección */
+    border-radius: 8px; /* Esquinas redondeadas para la sección */
+    margin-bottom: 20px; /* Espacio debajo de la sección */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra para profundidad */
+}
+
+.tituloSecond {
+    text-align: center; /* Centrar el título */
+    margin-bottom: 50px; /* Espacio debajo del título */
+    color: #3c4267; /* Color del texto */
+}
+
+.container {
+    display: flex; /* Usar flexbox para alinear las cajas */
+    justify-content: space-around; /* Espaciado entre las cajas */
+}
+
+.box {
+    background-color: #ad95a455; /* Fondo amarillo para cada caja */
+    padding: 20px; /* Espacio dentro de las cajas */
+    border-radius: 10px; /* Esquinas redondeadas para cada caja */
+    text-align: center; /* Centrar el contenido de la caja */
+    width: 25%; /* Ancho de cada caja */
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); /* Sombra ligera para las cajas */
+}
+
+.box h3 {
+    margin: 0; /* Eliminar márgenes del encabezado */
+    color: #3c4267; /* Color del texto del encabezado */
+}
+
+.box p {
+    margin: 10px 0 0; /* Espacio para el párrafo */
+    color: #3c4267; /* Color del texto del párrafo */
+}
+
+
