--- a/estilos/style.css
+++ b/estilos/style.css
@@ -20,7 +20,8 @@
     font-size: 6em;
     color: #3c4267;
     margin-bottom: 10px;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 
 #subTitulo {
@@ -45,11 +46,23 @@
 
 /* NAV */
 
+nav{
+
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+z-index: 999;
+
+}
+
 nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
     background-color: #ffdd91;
+    text-align: center;
+    width: 100%;
 }
 
 nav li {
@@ -60,48 +73,72 @@ nav li {
 nav a {
     text-decoration: none;
     color: #3c4267;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position: relative; 
+    transition: color 0.3s ease; 
 }
+
+nav a::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -2px;
+    left: 0;
+    background-color: #3c4267;
+    transition: width 0.3s ease;
+}
+
+
+
+nav a:hover::after {
+    width: 100%; 
+}
+
 
 
 /* ESTADISTICAS */
 
 .estadisticas {
     padding: 20px;
-    background-color: #f9f9f9; /* Fondo suave para la sección */
-    border-radius: 8px; /* Esquinas redondeadas para la sección */
-    margin-bottom: 20px; /* Espacio debajo de la sección */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra para profundidad */
+    background-color: #f9f9f9; 
+    border-radius: 8px; 
+    margin-bottom: 20px; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
 .tituloSecond {
-    text-align: center; /* Centrar el título */
-    margin-bottom: 50px; /* Espacio debajo del título */
-    color: #3c4267; /* Color del texto */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    text-align: center; 
+    margin-bottom: 50px;
+    color: #3c4267; 
 }
 
 .container {
-    display: flex; /* Usar flexbox para alinear las cajas */
-    justify-content: space-around; /* Espaciado entre las cajas */
+    display: flex; 
+    justify-content: space-around; 
 }
 
 .box {
-    background-color: #ad95a455; /* Fondo amarillo para cada caja */
-    padding: 20px; /* Espacio dentro de las cajas */
-    border-radius: 10px; /* Esquinas redondeadas para cada caja */
-    text-align: center; /* Centrar el contenido de la caja */
-    width: 25%; /* Ancho de cada caja */
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); /* Sombra ligera para las cajas */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+    background-color: #ad95a455; 
+    padding: 20px; 
+    border-radius: 10px; 
+    text-align: center; 
+    width: 15%; 
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); 
 }
 
 .box h3 {
-    margin: 0; /* Eliminar márgenes del encabezado */
-    color: #3c4267; /* Color del texto del encabezado */
+    margin: 0; 
+    color: #3c4267; 
 }
 
 .box p {
-    margin: 10px 0 0; /* Espacio para el párrafo */
-    color: #3c4267; /* Color del texto del párrafo */
+    margin: 10px 0 0; 
+    color: #3c4267; 
 }
 
 
