--- a/estilos/styleInfo.css
+++ b/estilos/styleInfo.css
@@ -1,3 +1,19 @@
+/* PORTADA */
+.portada {
+    background-color: #ffdd91; 
+    padding: 20px 20px; /* Espaciado superior e inferior */
+    text-align: center;
+}
+
+.portada h1#tituloPortada {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 32px; /* Tamaño de letra moderado */
+    color: #3c4267; /* Color gris oscuro para el título */
+    margin: 8px 0; /* Espacio alrededor del título */
+}
+
+/* CARDS */
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Columnas flexibles */
@@ -7,46 +23,46 @@
 }
 
 .card {
-    border-radius: 0.5rem;
+    border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
     border: 1px solid transparent;
     display: flex;
     flex-direction: column;
-    grid-row: span 30; /* Establece que cada tarjeta ocupe un número variable de filas */
+    grid-row: span 15; /* Establece que cada tarjeta ocupe un número variable de filas */
 }
 
 .image {
     object-fit: cover;
     width: 100%;
-    height: 150px; /* Altura fija para la imagen */
+    height: 250px; /* Altura fija para la imagen */
     background-image: url('https://www.corteidh.or.cr/images/sample/Como_puedo_realizar_una_denuncia.jpg'); /* Imagen de fondo */
     background-size: cover; /* Cubre todo el contenedor */
     background-position: center; /* Centra la imagen */
 }
 
 .content {
-    padding: 1.1rem;
+    padding: 18px;
     flex-grow: 1;
 }
 
 .title {
     color: #111827;
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+    font-size: 18px;
+    line-height: 28px;
     font-weight: 600;
 }
 
 .desc {
-    margin-top: 0.5rem;
+    margin-top: 8px;
     color: #6B7280;
-    font-size: 0.875rem;
-    line-height: 1.25rem;
+    font-size: 14px;
+    line-height: 20px;
 }
 
 .ver-mas {
     text-decoration: none;
-    color: #2563EB;
+    color: #3c4267;
     position: relative;
 }
 
@@ -55,7 +71,7 @@
     position: absolute;
     width: 0;
     height: 2px;
-    background-color: #2563EB;
+    background-color: #ffdd91;
     bottom: 0;
     left: 0;
     transition: width 0.3s ease-in-out;
@@ -64,3 +80,38 @@
 .ver-mas:hover::after {
     width: 100%;
 }
+/* FOOTER */
+
+.footer {
+    background-color: #ffdd91;
+    color: #ad95a4;
+    padding: 1.5rem;
+    text-align: center;
+    font-size: 0.9rem;
+  }
+  
+  .container-footer {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  
+  .footer-links {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  
+  .footer-links li {
+    display: inline;
+  }
+  
+  .footer-links a {
+    color: #ad95a4;
+    text-decoration: none;
+  }
+  
+  .footer-links a:hover{
+    color: #fff;
+  }
